28 Jul 2018
fix: redirect to index page and show flash message when torrent not exist details.php
fix: upload description removing characters such as ë, è, é, and ê
fix: upload stripping ascii from description instead of nfo

27 Jul 2018
update: add class color to flash message hnrs.php
fix: format_username can't be used with flash messages hnrs.php
fix: direct link to post view_topic.php
replace: file_get_contents() with fetch() tfreak.php
update: use global $fluent instead of passing it User.php
add: delete_by_id() Torrent.php
replace: MyPeers_ with peers_
fix: first db connection error takeupload.php
update: search.php bot use only
fix: delete torrent not deleting all caches and all likes to comments, only remove bp if torrent newer than 14 days
fix: tfreak block if no results
fix: only grab urls that are not empty images_cleanup.php
update: browse.php search by genre full text search

24 Jul 2018
remove: timeout from fetch guzzle config
fix: save image to path store_image()
fix: get backgrounds when url is empty function_bluray.php
fix: unquoted key send_message.php

23 Jul 2018
fix: remove dd($url) from function_tmdb.php
update: add try/catch to fetch()
fix: typo in newsrss.php
update: cleanup_manager.php replace edit/delete icons
update: Image Proxy to use fetch()
fix: function_bluray.php missing requires
add: Newsrss cleanup to remove news entries older than 30 days
update: only post newest nrewrss item when starting for the first time
fix: newsrss initial cache
fix: gifs no longer optimized on the fly by image proxy
fix: display no friends when friends list is empty userdetails.php
add: missing Avatar toggle in user blocks, currently only used in userdetails.php
fix: bbcode image class 
fix: typo in dragndrop.js

22 Jul 2018
fix: view_mailbox.php breaking template
fix: log_viewer.php not displaying all files correctly
fix: incorrect use of $cache->add
update: only show block in user_blocks if block is enabled by site